--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@brainandbones/skeleton": "^0.67.5",
 		"@fontsource/fira-mono": "^4.5.0",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@playwright/test": "1.25.0",
@@ -27,10 +28,14 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.7.1",
-		"svelte-preprocess": "^4.10.6",
+		"svelte-preprocess": "^4.10.7",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"vite": "^3.1.0",
+		"postcss": "^8.4.14",
+		"postcss-load-config": "^4.0.1",
+		"autoprefixer": "^10.4.7",
+		"tailwindcss": "^3.1.5"
 	},
 	"type": "module",
 	"dependencies": {
