Wrote my own table because this stupid table does not support buttons as elements

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-	"svelteBracketNewLine": true,
-	"useTabs": true,
+	"svelteBracketNewLine": false,
+	"useTabs": false,
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
