--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/kit": "next",
 		"@tailwindcss/forms": "^0.5.3",
 		"@types/cookie": "^0.5.1",
+		"@types/node": "^18.11.9",
 		"@typescript-eslint/eslint-plugin": "^5.27.0",
 		"@typescript-eslint/parser": "^5.27.0",
 		"autoprefixer": "^10.4.7",
@@ -31,16 +32,21 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
+		"prisma": "^4.6.1",
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.7.1",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.5",
+		"ts-node": "^10.9.1",
 		"tslib": "^2.3.1",
-		"typescript": "^4.7.4",
+		"typescript": "^4.9.3",
 		"vite": "^3.1.0"
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "^4.6.1",
+		"cli-progress": "^3.11.2",
+		"dotenv": "^16.0.3",
 		"url": "^0.11.0"
 	}
 }
