--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
 		"postcss": "^8.4.14",
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
+		"prettier-plugin-svelte": "^2.8.1",
 		"prisma": "^4.6.1",
 		"svelte": "^3.46.0",
 		"svelte-check": "^2.7.1",
@@ -45,6 +45,7 @@
 	"type": "module",
 	"dependencies": {
 		"@prisma/client": "^4.6.1",
+		"@skeletonlabs/skeleton": "^0.76.3",
 		"cli-progress": "^3.11.2",
 		"dotenv": "^16.0.3",
 		"url": "^0.11.0"
